// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorites should match a snapshot with favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorites
    favorites={
        Array [
            Object {
              "category": "planets",
              "climate": "temperate, tropical",
              "name": "Yavin IV",
              "population": "1000",
              "residents": Array [],
              "terrain": "jungle, rainforests",
            },
            Object {
              "category": "vehicles",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "numberOfPassengers": "30",
              "vehicleClass": "wheeled",
            },
            Object {
              "category": "people",
              "homeworld": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
          ]
    }
    handleFavoriteClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <PlanetCard
          card={
                    Object {
                              "category": "planets",
                              "climate": "temperate, tropical",
                              "name": "Yavin IV",
                              "population": "1000",
                              "residents": Array [],
                              "terrain": "jungle, rainforests",
                            }
          }
          favorites={
                    Array [
                              Object {
                                "category": "planets",
                                "climate": "temperate, tropical",
                                "name": "Yavin IV",
                                "population": "1000",
                                "residents": Array [],
                                "terrain": "jungle, rainforests",
                              },
                              Object {
                                "category": "vehicles",
                                "model": "Digger Crawler",
                                "name": "Sand Crawler",
                                "numberOfPassengers": "30",
                                "vehicleClass": "wheeled",
                              },
                              Object {
                                "category": "people",
                                "homeworld": "Tatooine",
                                "name": "Luke Skywalker",
                                "population": "200000",
                                "species": "Human",
                              },
                            ]
          }
          handleFavoriteClick={[Function]}
/>,
        <VehicleCard
          card={
                    Object {
                              "category": "vehicles",
                              "model": "Digger Crawler",
                              "name": "Sand Crawler",
                              "numberOfPassengers": "30",
                              "vehicleClass": "wheeled",
                            }
          }
          favorites={
                    Array [
                              Object {
                                "category": "planets",
                                "climate": "temperate, tropical",
                                "name": "Yavin IV",
                                "population": "1000",
                                "residents": Array [],
                                "terrain": "jungle, rainforests",
                              },
                              Object {
                                "category": "vehicles",
                                "model": "Digger Crawler",
                                "name": "Sand Crawler",
                                "numberOfPassengers": "30",
                                "vehicleClass": "wheeled",
                              },
                              Object {
                                "category": "people",
                                "homeworld": "Tatooine",
                                "name": "Luke Skywalker",
                                "population": "200000",
                                "species": "Human",
                              },
                            ]
          }
          handleFavoriteClick={[Function]}
/>,
        <PersonCard
          card={
                    Object {
                              "category": "people",
                              "homeworld": "Tatooine",
                              "name": "Luke Skywalker",
                              "population": "200000",
                              "species": "Human",
                            }
          }
          favorites={
                    Array [
                              Object {
                                "category": "planets",
                                "climate": "temperate, tropical",
                                "name": "Yavin IV",
                                "population": "1000",
                                "residents": Array [],
                                "terrain": "jungle, rainforests",
                              },
                              Object {
                                "category": "vehicles",
                                "model": "Digger Crawler",
                                "name": "Sand Crawler",
                                "numberOfPassengers": "30",
                                "vehicleClass": "wheeled",
                              },
                              Object {
                                "category": "people",
                                "homeworld": "Tatooine",
                                "name": "Luke Skywalker",
                                "population": "200000",
                                "species": "Human",
                              },
                            ]
          }
          handleFavoriteClick={[Function]}
/>,
      ],
      "className": "favorites-display",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Yavin IV",
        "nodeType": "function",
        "props": Object {
          "card": Object {
            "category": "planets",
            "climate": "temperate, tropical",
            "name": "Yavin IV",
            "population": "1000",
            "residents": Array [],
            "terrain": "jungle, rainforests",
          },
          "favorites": Array [
            Object {
              "category": "planets",
              "climate": "temperate, tropical",
              "name": "Yavin IV",
              "population": "1000",
              "residents": Array [],
              "terrain": "jungle, rainforests",
            },
            Object {
              "category": "vehicles",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "numberOfPassengers": "30",
              "vehicleClass": "wheeled",
            },
            Object {
              "category": "people",
              "homeworld": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
          ],
          "handleFavoriteClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Sand Crawler",
        "nodeType": "function",
        "props": Object {
          "card": Object {
            "category": "vehicles",
            "model": "Digger Crawler",
            "name": "Sand Crawler",
            "numberOfPassengers": "30",
            "vehicleClass": "wheeled",
          },
          "favorites": Array [
            Object {
              "category": "planets",
              "climate": "temperate, tropical",
              "name": "Yavin IV",
              "population": "1000",
              "residents": Array [],
              "terrain": "jungle, rainforests",
            },
            Object {
              "category": "vehicles",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "numberOfPassengers": "30",
              "vehicleClass": "wheeled",
            },
            Object {
              "category": "people",
              "homeworld": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
          ],
          "handleFavoriteClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Luke Skywalker",
        "nodeType": "function",
        "props": Object {
          "card": Object {
            "category": "people",
            "homeworld": "Tatooine",
            "name": "Luke Skywalker",
            "population": "200000",
            "species": "Human",
          },
          "favorites": Array [
            Object {
              "category": "planets",
              "climate": "temperate, tropical",
              "name": "Yavin IV",
              "population": "1000",
              "residents": Array [],
              "terrain": "jungle, rainforests",
            },
            Object {
              "category": "vehicles",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "numberOfPassengers": "30",
              "vehicleClass": "wheeled",
            },
            Object {
              "category": "people",
              "homeworld": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
          ],
          "handleFavoriteClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <PlanetCard
            card={
                        Object {
                                    "category": "planets",
                                    "climate": "temperate, tropical",
                                    "name": "Yavin IV",
                                    "population": "1000",
                                    "residents": Array [],
                                    "terrain": "jungle, rainforests",
                                  }
            }
            favorites={
                        Array [
                                    Object {
                                      "category": "planets",
                                      "climate": "temperate, tropical",
                                      "name": "Yavin IV",
                                      "population": "1000",
                                      "residents": Array [],
                                      "terrain": "jungle, rainforests",
                                    },
                                    Object {
                                      "category": "vehicles",
                                      "model": "Digger Crawler",
                                      "name": "Sand Crawler",
                                      "numberOfPassengers": "30",
                                      "vehicleClass": "wheeled",
                                    },
                                    Object {
                                      "category": "people",
                                      "homeworld": "Tatooine",
                                      "name": "Luke Skywalker",
                                      "population": "200000",
                                      "species": "Human",
                                    },
                                  ]
            }
            handleFavoriteClick={[Function]}
/>,
          <VehicleCard
            card={
                        Object {
                                    "category": "vehicles",
                                    "model": "Digger Crawler",
                                    "name": "Sand Crawler",
                                    "numberOfPassengers": "30",
                                    "vehicleClass": "wheeled",
                                  }
            }
            favorites={
                        Array [
                                    Object {
                                      "category": "planets",
                                      "climate": "temperate, tropical",
                                      "name": "Yavin IV",
                                      "population": "1000",
                                      "residents": Array [],
                                      "terrain": "jungle, rainforests",
                                    },
                                    Object {
                                      "category": "vehicles",
                                      "model": "Digger Crawler",
                                      "name": "Sand Crawler",
                                      "numberOfPassengers": "30",
                                      "vehicleClass": "wheeled",
                                    },
                                    Object {
                                      "category": "people",
                                      "homeworld": "Tatooine",
                                      "name": "Luke Skywalker",
                                      "population": "200000",
                                      "species": "Human",
                                    },
                                  ]
            }
            handleFavoriteClick={[Function]}
/>,
          <PersonCard
            card={
                        Object {
                                    "category": "people",
                                    "homeworld": "Tatooine",
                                    "name": "Luke Skywalker",
                                    "population": "200000",
                                    "species": "Human",
                                  }
            }
            favorites={
                        Array [
                                    Object {
                                      "category": "planets",
                                      "climate": "temperate, tropical",
                                      "name": "Yavin IV",
                                      "population": "1000",
                                      "residents": Array [],
                                      "terrain": "jungle, rainforests",
                                    },
                                    Object {
                                      "category": "vehicles",
                                      "model": "Digger Crawler",
                                      "name": "Sand Crawler",
                                      "numberOfPassengers": "30",
                                      "vehicleClass": "wheeled",
                                    },
                                    Object {
                                      "category": "people",
                                      "homeworld": "Tatooine",
                                      "name": "Luke Skywalker",
                                      "population": "200000",
                                      "species": "Human",
                                    },
                                  ]
            }
            handleFavoriteClick={[Function]}
/>,
        ],
        "className": "favorites-display",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Yavin IV",
          "nodeType": "function",
          "props": Object {
            "card": Object {
              "category": "planets",
              "climate": "temperate, tropical",
              "name": "Yavin IV",
              "population": "1000",
              "residents": Array [],
              "terrain": "jungle, rainforests",
            },
            "favorites": Array [
              Object {
                "category": "planets",
                "climate": "temperate, tropical",
                "name": "Yavin IV",
                "population": "1000",
                "residents": Array [],
                "terrain": "jungle, rainforests",
              },
              Object {
                "category": "vehicles",
                "model": "Digger Crawler",
                "name": "Sand Crawler",
                "numberOfPassengers": "30",
                "vehicleClass": "wheeled",
              },
              Object {
                "category": "people",
                "homeworld": "Tatooine",
                "name": "Luke Skywalker",
                "population": "200000",
                "species": "Human",
              },
            ],
            "handleFavoriteClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Sand Crawler",
          "nodeType": "function",
          "props": Object {
            "card": Object {
              "category": "vehicles",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "numberOfPassengers": "30",
              "vehicleClass": "wheeled",
            },
            "favorites": Array [
              Object {
                "category": "planets",
                "climate": "temperate, tropical",
                "name": "Yavin IV",
                "population": "1000",
                "residents": Array [],
                "terrain": "jungle, rainforests",
              },
              Object {
                "category": "vehicles",
                "model": "Digger Crawler",
                "name": "Sand Crawler",
                "numberOfPassengers": "30",
                "vehicleClass": "wheeled",
              },
              Object {
                "category": "people",
                "homeworld": "Tatooine",
                "name": "Luke Skywalker",
                "population": "200000",
                "species": "Human",
              },
            ],
            "handleFavoriteClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Luke Skywalker",
          "nodeType": "function",
          "props": Object {
            "card": Object {
              "category": "people",
              "homeworld": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
            "favorites": Array [
              Object {
                "category": "planets",
                "climate": "temperate, tropical",
                "name": "Yavin IV",
                "population": "1000",
                "residents": Array [],
                "terrain": "jungle, rainforests",
              },
              Object {
                "category": "vehicles",
                "model": "Digger Crawler",
                "name": "Sand Crawler",
                "numberOfPassengers": "30",
                "vehicleClass": "wheeled",
              },
              Object {
                "category": "people",
                "homeworld": "Tatooine",
                "name": "Luke Skywalker",
                "population": "200000",
                "species": "Human",
              },
            ],
            "handleFavoriteClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Favorites should match a snapshot without favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorites
    favorites={Array []}
    handleFavoriteClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h5>
        You Have No Favorites
</h5>,
      "className": "favorites-display",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "You Have No Favorites",
      },
      "ref": null,
      "rendered": "You Have No Favorites",
      "type": "h5",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h5>
          You Have No Favorites
</h5>,
        "className": "favorites-display",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "You Have No Favorites",
        },
        "ref": null,
        "rendered": "You Have No Favorites",
        "type": "h5",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
